force-app/main/default/objects/Project__c/fields/Project_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Project_Purpose__c</fullName>
    <inlineHelpText>Describe the purpose of this project in 2-3 paragraphs.</inlineHelpText>
    <label>Project Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>