force-app/main/default/objects/Project__c/fields/Project_Scope__c.field-meta.xml
<CustomField>
    <fullName>Project_Scope__c</fullName>
    <label>Project Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Research &amp; Development</fullName>
            </value>
            <value>
                <fullName>New Testament</fullName>
            </value>
            <value>
                <fullName>Full Bible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>