force-app/main/default/objects/Project__c/fields/Projected_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Completion_Date__c</fullName>
    <label>Projected Completion Date</label>
    <type>Date</type>
</CustomField>