force-app/main/default/objects/Project__c/fields/Proposal_Creator__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal Creator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Proposals)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>