force-app/main/default/objects/Project__c/fields/Proposal_Details__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Details__c</fullName>
    <inlineHelpText>Provide one paragraph describing essence of the project. This should be a well-summarized overview to be used for external/advancement purposes.</inlineHelpText>
    <label>Proposal Details</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>