force-app/main/default/objects/Project__c/fields/Public_Description__c.field-meta.xml
<CustomField>
    <fullName>Public_Description__c</fullName>
    <inlineHelpText>This will display in the donor portal.</inlineHelpText>
    <label>Public Description</label>
    <type>TextArea</type>
</CustomField>