force-app/main/default/objects/Project__c/fields/Public_Name__c.field-meta.xml
<CustomField>
    <fullName>Public_Name__c</fullName>
    <label>Public Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>