force-app/main/default/objects/Project__c/fields/Publishing_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Publishing_Timeline__c</fullName>
    <inlineHelpText>What is the anticipated publishing timeline for this project?</inlineHelpText>
    <label>Publishing Timeline</label>
    <length>32708</length>
    <type>LongTextArea</type>
</CustomField>