force-app/main/default/objects/Project__c/fields/Q1_Activity__c.field-meta.xml
<CustomField>
    <fullName>Q1_Activity__c</fullName>
    <inlineHelpText>October - December | What activities will be implemented to address these needs/opportunities?</inlineHelpText>
    <label>Q1 Activity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>