force-app/main/default/objects/Project__c/fields/Q2_Activity__c.field-meta.xml
<CustomField>
    <fullName>Q2_Activity__c</fullName>
    <inlineHelpText>January - March | What activities will be implemented to address these needs/opportunities?</inlineHelpText>
    <label>Q2 Activity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>