force-app/main/default/objects/Project__c/fields/Q3_Activity__c.field-meta.xml
<CustomField>
    <fullName>Q3_Activity__c</fullName>
    <inlineHelpText>April - June | What activities will be implemented to address these needs/opportunities?</inlineHelpText>
    <label>Q3 Activity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>