force-app/main/default/objects/Project__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>East Africa</fullName>
                <label>Africa - East</label>
            </value>
            <value>
                <fullName>North East Africa</fullName>
                <label>Africa - North East</label>
            </value>
            <value>
                <fullName>Southern Africa</fullName>
                <label>Africa - Southern</label>
            </value>
            <value>
                <fullName>West Africa</fullName>
                <label>Africa - West</label>
            </value>
            <value>
                <fullName>Asia</fullName>
                <isActive>false</isActive>
                <label>Asia</label>
            </value>
            <value>
                <fullName>East Asia</fullName>
                <isActive>false</isActive>
                <label>East Asia</label>
            </value>
            <value>
                <fullName>East Asia Pacific</fullName>
            </value>
            <value>
                <fullName>Eurasia</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
                <isActive>false</isActive>
                <label>Europe</label>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
                <isActive>false</isActive>
                <label>Latin America</label>
            </value>
            <value>
                <fullName>Americas</fullName>
                <label>Latin America</label>
            </value>
            <value>
                <fullName>MENA</fullName>
            </value>
            <value>
                <fullName>MENA/Europe</fullName>
                <isActive>false</isActive>
                <label>MENA/Europe</label>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>South Asia</fullName>
            </value>
            <value>
                <fullName>The Americas</fullName>
                <isActive>false</isActive>
                <label>The Americas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>