force-app/main/default/objects/Project__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>Rejected Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>