force-app/main/default/objects/Project__c/fields/Remaining_Need__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Need__c</fullName>
    <formula>Approved_Budget__c - General_Accounting_Unit__r.Amount_Raised__c - Bib_Sum_of_Future_Ask_Allocations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Funding Need - GAU Amount Raised - Bib_Sum_of_Future_Ask_Allocations__c</inlineHelpText>
    <label>Remaining Need</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>