force-app/main/default/objects/Project__c/fields/Requested_Budget__c.field-meta.xml
<CustomField>
    <fullName>Requested_Budget__c</fullName>
    <inlineHelpText>Fiscal year amount needed from Biblica to complete project.</inlineHelpText>
    <label>Requested Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>