force-app/main/default/objects/Project__c/fields/Resource_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Resource_Grouping__c</fullName>
    <inlineHelpText>If you are group resource together for this LMP, describe how each resource will uniquely benefit this language community and address the need in each of the different contexts?</inlineHelpText>
    <label>Resource Grouping</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>