force-app/main/default/objects/Project__c/fields/Resources__c.field-meta.xml
<CustomField>
    <fullName>Resources__c</fullName>
    <inlineHelpText>This is a list of resources which are linked to the project via the Project Deliverables related records. It is not directly editable.</inlineHelpText>
    <label>Resources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>