force-app/main/default/objects/Project__c/fields/Revised_Reach__c.field-meta.xml
<CustomField>
    <fullName>Revised_Reach__c</fullName>
    <inlineHelpText>Please enter a number.</inlineHelpText>
    <label>Revised Reach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>