force-app/main/default/objects/Project__c/fields/Revised_Reach_Text__c.field-meta.xml
<CustomField>
    <fullName>Revised_Reach_Text__c</fullName>
    <label>Revised Reach Explanation</label>
    <type>TextArea</type>
</CustomField>