force-app/main/default/objects/Project__c/fields/RT_Partners__c.field-meta.xml
<CustomField>
    <fullName>RT_Partners__c</fullName>
    <inlineHelpText>Please score yourself from 1-10. 1 being poor, 5 average, and 10 excellent.</inlineHelpText>
    <label>RT Partners</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>