force-app/main/default/objects/Project__c/fields/RT_Score__c.field-meta.xml
<CustomField>
    <fullName>RT_Score__c</fullName>
    <formula>CASE(RT_Strategy__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, &quot;6&quot;, 6, &quot;7&quot;, 7, &quot;8&quot;, 8, &quot;9&quot;, 9, &quot;10&quot;, 10, 0) 
+
CASE(RT_Impact__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, &quot;6&quot;, 6, &quot;7&quot;, 7, &quot;8&quot;, 8, &quot;9&quot;, 9, &quot;10&quot;, 10, 0) 
+
CASE(RT_Partners__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, &quot;6&quot;, 6, &quot;7&quot;, 7, &quot;8&quot;, 8, &quot;9&quot;, 9, &quot;10&quot;, 10, 0) 
+
CASE(RT_Scalability__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, &quot;6&quot;, 6, &quot;7&quot;, 7, &quot;8&quot;, 8, &quot;9&quot;, 9, &quot;10&quot;, 10, 0)
+
CASE(RT_80_20__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, &quot;6&quot;, 6, &quot;7&quot;, 7, &quot;8&quot;, 8, &quot;9&quot;, 9, &quot;10&quot;, 10, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RT Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>