force-app/main/default/objects/Project__c/fields/Scalability__c.field-meta.xml
<CustomField>
    <fullName>Scalability__c</fullName>
    <inlineHelpText>Do you anticipate increased demand for this resource/program from our partner, in quantity or geography? If so, when? And what is your plan to meet that demand?</inlineHelpText>
    <label>Scalability</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>