force-app/main/default/objects/Project__c/fields/Scalable_To__c.field-meta.xml
<CustomField>
    <fullName>Scalable_To__c</fullName>
    <inlineHelpText>The maximum budget amount that this project could utilize in a capable manner.</inlineHelpText>
    <label>Scalable To</label>
    <type>TextArea</type>
</CustomField>