force-app/main/default/objects/Project__c/fields/Secondary_Language_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Language_Explanation__c</fullName>
    <inlineHelpText>Does this project include resources in other secondary languages (i.e. Spanish, French, English, etc.)? If so, please state the reason(s) why.</inlineHelpText>
    <label>Secondary Language Explanation</label>
    <length>32708</length>
    <type>LongTextArea</type>
</CustomField>