force-app/main/default/objects/Project__c/fields/Status_Comment__c.field-meta.xml
<CustomField>
    <fullName>Status_Comment__c</fullName>
    <inlineHelpText>Why has the timeline has been changed; what caused the delay, or accelerated the progress?</inlineHelpText>
    <label>Status Comment</label>
    <type>TextArea</type>
</CustomField>