force-app/main/default/objects/Project__c/fields/Strategic_Focus__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Focus__c</fullName>
    <label>Strategic Focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Innovation</fullName>
            </value>
            <value>
                <fullName>Frontline Church</fullName>
            </value>
            <value>
                <fullName>Gateway Translation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rising Generations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>