force-app/main/default/objects/Project__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <inlineHelpText>How well does the proposed project align with our mission and our strategic priorities?</inlineHelpText>
    <label>Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>