force-app/main/default/objects/Project__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <inlineHelpText>Describe the target audience being reached with this specific resource/program.</inlineHelpText>
    <label>WHO? - Target Audience</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>