force-app/main/default/objects/Project__c/fields/Team_Member_Pool__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Pool__c</fullName>
    <label>Team Member Pool</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>