force-app/main/default/objects/Project__c/fields/Team_Members_Needing_Training__c.field-meta.xml
<CustomField>
    <fullName>Team_Members_Needing_Training__c</fullName>
    <inlineHelpText>How many translation team members need translation training?</inlineHelpText>
    <label>Team Members Needing Training</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>