force-app/main/default/objects/Project__c/fields/Team_Proficient_in_ParaText__c.field-meta.xml
<CustomField>
    <fullName>Team_Proficient_in_ParaText__c</fullName>
    <inlineHelpText>Is the translation team all proficient in ParaText?</inlineHelpText>
    <label>Team Proficient in ParaText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>