force-app/main/default/objects/Project__c/fields/Total_Funding_Need__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding_Need__c</fullName>
    <inlineHelpText>Read Only: Total amount comes from the sum of Project Deliverable costs. This should equal Approved Budget.</inlineHelpText>
    <label>Total Funding Need</label>
    <summarizedField>Project_Deliverable__c.Funding_Need__c</summarizedField>
    <summaryFilterItems>
        <field>Project_Deliverable__c.Status__c</field>
        <operation>equals</operation>
        <value>Planning, In Progress, Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Deliverable__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>