force-app/main/default/objects/Project__c/fields/Total_Project_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Budget__c</fullName>
    <inlineHelpText>Total project cost to complete project. This includes Biblica, partner, and other local funding combined.</inlineHelpText>
    <label>Total Project Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>