force-app/main/default/objects/Project__c/fields/Total_Reach__c.field-meta.xml
<CustomField>
    <fullName>Total_Reach__c</fullName>
    <formula>Printed_Reach__c + Non_Print_Reach__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The sum of Printed and Non-Print actuals from quarterly reports.</inlineHelpText>
    <label>Total Reach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>