force-app/main/default/objects/Project__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <formula>IF(ISPICKVAL(RT_Strategy__c, &quot;&quot;), 0, VALUE(TEXT(RT_Strategy__c)))
+
IF(ISPICKVAL(RT_Impact__c, &quot;&quot;), 0, VALUE(TEXT(RT_Impact__c)))
+
IF(ISPICKVAL(RT_Partners__c, &quot;&quot;), 0, VALUE(TEXT(RT_Partners__c)))
+
IF(ISPICKVAL(RT_Scalability__c, &quot;&quot;), 0, VALUE(TEXT(RT_Scalability__c)))
+
IF(ISPICKVAL(RT_80_20__c, &quot;&quot;), 0, VALUE(TEXT(RT_80_20__c)))
+
IF(ISPICKVAL(FT_Strategy__c, &quot;&quot;), 0, VALUE(TEXT(FT_Strategy__c)))
+
IF(ISPICKVAL(FT_Impact__c, &quot;&quot;), 0, VALUE(TEXT(FT_Impact__c)))
+
IF(ISPICKVAL(FT_Partners__c, &quot;&quot;), 0, VALUE(TEXT(FT_Partners__c)))
+
IF(ISPICKVAL(FT_Scalability__c, &quot;&quot;), 0, VALUE(TEXT(FT_Scalability__c)))
+
IF(ISPICKVAL(FT_80_20__c, &quot;&quot;), 0, VALUE(TEXT(FT_80_20__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Combined Review Team and Field Team Score.</inlineHelpText>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>