force-app/main/default/objects/Project__c/fields/Translation_Impact__c.field-meta.xml
<CustomField>
    <fullName>Translation_Impact__c</fullName>
    <inlineHelpText>What potential impact can Biblica expect to see from this translation?</inlineHelpText>
    <label>Translation Impact</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>