force-app/main/default/objects/Project__c/fields/Translation_Iterations__c.field-meta.xml
<CustomField>
    <fullName>Translation_Iterations__c</fullName>
    <inlineHelpText>Will partners be able to leverage the iterations produced from our new translations when they are available? (Luke/Acts, NT, FB) Please specify a concrete plan (e.g., print Luke/Acts to promote the translation)</inlineHelpText>
    <label>Translation Iterations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>