force-app/main/default/objects/Project__c/fields/Translation_Name__c.field-meta.xml
<CustomField>
    <fullName>Translation_Name__c</fullName>
    <label>Translation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>