force-app/main/default/objects/Project__c/fields/Translation_Professionals__c.field-meta.xml
<CustomField>
    <fullName>Translation_Professionals__c</fullName>
    <inlineHelpText>What does the pool of translation professionals look like for this language? Are qualified individuals easy to find?</inlineHelpText>
    <label>Translation Professionals</label>
    <type>TextArea</type>
</CustomField>