force-app/main/default/objects/Project__c/fields/Translation_Risk__c.field-meta.xml
<CustomField>
    <fullName>Translation_Risk__c</fullName>
    <inlineHelpText>What is the risk of this new translation not being accepted by the Church or partners?</inlineHelpText>
    <label>Translation Risk</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>