force-app/main/default/objects/Project__c/fields/View_in_ClickUp__c.field-meta.xml
<CustomField>
    <fullName>View_in_ClickUp__c</fullName>
    <formula>HYPERLINK(&apos;https://app.clickup.com/67554/v/l/f/&apos; &amp;  Clickup_External_ID__c  &amp; &apos;?pr=4344873&apos;, &apos;Click to View in ClickUp&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View in ClickUp</label>
    <type>Text</type>
</CustomField>