force-app/main/default/objects/Project__c/fields/x80_20__c.field-meta.xml
<CustomField>
    <fullName>x80_20__c</fullName>
    <inlineHelpText>A principle of the 80/20 Rule is to focus on the &quot;critical few&quot; efforts that produce the majority of the results. In light of other needs and opportunities in your region, why is this an &quot;80/20&quot; project that warrants priority funding?</inlineHelpText>
    <label>&quot;80/20&quot;</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>