force-app/main/default/objects/Project__c/recordTypes/Language_Ministry_Project.recordType-meta.xml
<RecordType>
    <fullName>Language_Ministry_Project</fullName>
    <active>true</active>
    <label>Language Ministry Project</label>
</RecordType>