force-app/main/default/objects/Project__c/recordTypes/Language_Translation_Plan.recordType-meta.xml
<RecordType>
    <fullName>Language_Translation_Plan</fullName>
    <active>true</active>
    <label>Language Translation Plan</label>
</RecordType>