force-app/main/default/objects/Project__c/validationRules/Only_Certain_Users_can_edit_Project_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Certain_Users_can_edit_Project_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND( $Permission.Edit_Project_Name_Field = false, ISCHANGED(Name))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You do not have access to change the Project Name. If you need the name to be changed please contact Sheri Greiner, Angela Hong, Jennifer Garces, or Adam Nash.</errorMessage>
</ValidationRule>