force-app/main/default/objects/Project__c/listViews/Africa_FY22_LMPs.listView-meta.xml
<ListView>
    <fullName>Africa_FY22_LMPs</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Language_Community__c</columns>
    <columns>Requested_Budget__c</columns>
    <columns>Status__c</columns>
    <columns>Approved_Budget__c</columns>
    <columns>Resources__c</columns>
    <columns>Media_Format__c</columns>
    <columns>Estimated_Reach__c</columns>
    <columns>LMP_Project_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled,Proposal Planning,Proposal Submitted,Proposal Approved</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Language_Ministry_Project</value>
    </filters>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>includes</operation>
        <value>FY22</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>contains</operation>
        <value>Africa,East Africa,North East Africa,Southern Africa,West Africa</value>
    </filters>
    <label>Africa FY22 LMPs</label>
</ListView>