force-app/main/default/objects/Project__c/listViews/Africa_LMP_Projects.listView-meta.xml
<ListView>
    <fullName>Africa_LMP_Projects</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6) and 7</booleanFilter>
    <columns>NAME</columns>
    <columns>Language_Community__c</columns>
    <columns>Partnership_Director__c</columns>
    <columns>Region__c</columns>
    <columns>Approved_Budget__c</columns>
    <columns>Total_Funding_Need__c</columns>
    <columns>General_Accounting_Unit__c</columns>
    <columns>Media_Format__c</columns>
    <columns>Countries_Served__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Language_Ministry_Project</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Africa</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>East Africa</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>North East Africa</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Southern Africa</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>West Africa</value>
    </filters>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>FY21</value>
    </filters>
    <label>Africa FY21 LMP Projects</label>
</ListView>