force-app/main/default/objects/Project__c/listViews/All_FY21_LMP_Projects.listView-meta.xml
<ListView>
    <fullName>All_FY21_LMP_Projects</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Language_Community__c</columns>
    <columns>Media_Format__c</columns>
    <columns>Non_Print_Reach__c</columns>
    <columns>Printed_Reach__c</columns>
    <columns>LMP_Project_Manager__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>General_Accounting_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Language_Ministry_Project</value>
    </filters>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>includes</operation>
        <value>FY21</value>
    </filters>
    <label>All FY21 LMP Projects</label>
</ListView>