force-app/main/default/objects/Project__c/listViews/All_LMP_Projects.listView-meta.xml
<ListView>
    <fullName>All_LMP_Projects</fullName>
    <columns>NAME</columns>
    <columns>Strategic_Focus__c</columns>
    <columns>Region__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Language_Community__c</columns>
    <columns>Status__c</columns>
    <columns>Approved_Budget__c</columns>
    <columns>General_Accounting_Unit__c</columns>
    <columns>Media_Format__c</columns>
    <columns>Total_Funding_Need__c</columns>
    <columns>Partnership_Director__c</columns>
    <columns>LMP_Project_Manager__c</columns>
    <columns>Total_Reach__c</columns>
    <columns>Impact_Quantity__c</columns>
    <columns>Parent_Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Language_Ministry_Project</value>
    </filters>
    <label>All LMP Projects</label>
</ListView>