force-app/main/default/objects/Project__c/listViews/All_Rising_Gen_LMP_Projects.listView-meta.xml
<ListView>
    <fullName>All_Rising_Gen_LMP_Projects</fullName>
    <columns>NAME</columns>
    <columns>LMP_Project_Manager__c</columns>
    <columns>Partnership_Director__c</columns>
    <columns>Status__c</columns>
    <columns>Strategic_Focus__c</columns>
    <columns>Region__c</columns>
    <columns>Countries_Served__c</columns>
    <columns>Total_Funding_Need__c</columns>
    <columns>Target_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Language_Ministry_Project</value>
    </filters>
    <filters>
        <field>Strategic_Focus__c</field>
        <operation>equals</operation>
        <value>Rising Generations</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>All Rising Gen LMP Projects</label>
</ListView>