force-app/main/default/objects/Project__c/listViews/All_TPP_Projects.listView-meta.xml
<ListView>
    <fullName>All_TPP_Projects</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Language_Community__c</columns>
    <columns>Approved_Budget__c</columns>
    <columns>Total_Funding_Need__c</columns>
    <columns>Status__c</columns>
    <columns>LTP_Project_Leader__c</columns>
    <columns>LTP_Project_Manager__c</columns>
    <columns>General_Accounting_Unit__c</columns>
    <columns>New_or_Continuation__c</columns>
    <columns>Translation_Name__c</columns>
    <columns>Strategic_Focus__c</columns>
    <columns>Projected_Completion_Date__c</columns>
    <columns>Projected_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Language_Translation_Plan</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>All LTP Projects</label>
</ListView>